- Improved configure's compatibilty - it should detect pthreads more reliably
  and it should detect ladspa.h when located in /usr/local/include without
  /usr/local/include being contained in the include path.
- This release should compile and run on FreeBSD systems and possibly
  OpenBSD, too. Thanks for help and testing this goes to 
  Tilman Linneweh <tilman@arved.de>.

[v3.72]
- Applied a patch from Matthew Evans <activesx@hotmail.com> that introduces 
  support for Ogg Vorbis audiofiles. It requires ogg123 > RC2 and sox to work.
  Autodetection is supported via configure (--enable-ogg123).
- Experimental support for input devices other than the core-pointer
  under XFree86 > 4. This uses the xsetpointer executable that comes with
  XFree86. configure should autodetect this correctly, in case it doesn't
  use the --enable-xetpointer switch.
- Adrian sent me a patch introducing two new buttons: mute and solo. As it
  didn't fully harmonize with the sequencer I rewrote parts of it and added new
  functionality to the turntables: They can now be switched to mix_solo or
  mix_mute - these settings affect current mixing only - their values will
  neither be saved nor will changes to those control be recorded in the
  sequencer - if you want to record muting events either use the mute button
  from the turntable's trigger menu, the keyboard short-cuts (alt/strg), or
  your middle mouse button.
- fixed a bug that produced corrupt wavfiles on big endian machines
- some minor fixes to make terminatorX compile with newer gcc releases
- Well, I am allowed to change my mind, aren't I? Anyway, 3DNow! is back.
  Nevertheless newer gcc releases seem to have a bug in handling movq and
  the current 3DNow! stereo implementation does not seem to be very efficient.
  So use --enable-3dnow only if you want to help me improve perfomance.
- Modified the mpg123 loader in order to make it work with mpg321, too.
  mpg321 lacks support for mpg123's -m switch ("singlemix") therefor 